Fixed wrong order of history. Styled popovers.

--- a/app/views/fireteam/armor.html
+++ b/app/views/fireteam/armor.html
@@ -6,7 +6,7 @@
   <!--<div class="col-md-3 col-xs-3" ng-repeat="armor in [player.armors.head, player.armors.arms, player.armors.chest, player.armors.legs] track by $index">-->
     <!--<div class="card">-->
       <!--<div class="front p-0">-->
-        <!--<img popover="{{armor.armor.name}}" popover-trigger="mouseenter" class="img-responsive" ng-src="{{armor.armor.icon}}">-->
+        <!--<img popover="{{armor.armor.name}}" popover-append-to-body="true" popover-trigger="mouseenter" class="img-responsive" ng-src="{{armor.armor.icon}}">-->
       <!--</div>-->
     <!--</div>-->
   <!--</div>-->
