--- a/app/views/fireteam/weapons.html
+++ b/app/views/fireteam/weapons.html
@@ -4,7 +4,7 @@
     <!--<div class="col-xs-4 pt-10">-->
       <!--<div class="card mb-0">-->
         <!--<div class="front p-0">-->
-          <!--<img popover="{{weapon.weapon.name}}" popover-trigger="mouseenter"-->
+          <!--<img popover="{{weapon.weapon.name}}" popover-trigger="mouseenter" popover-append-to-body="true"-->
                <!--class="img-responsive weapon-img {{weapon.weapon.burnColor || 'kinetic-dmg'}}"-->
                <!--ng-src="{{weapon.weapon.icon}}" alt="{{weapon.weapon.name}}">-->
         <!--</div>-->
@@ -17,7 +17,7 @@
            <!--data-position="right" chardin-show="hidden-xs hidden-sm {{$middle ? '' : 'hidden'}}"></div>-->
       <div weapon-nodes="[player.weapons.primary, player.weapons.special, player.weapons.heavy]" show-help-overlay="isHelpOverlayElement(fireteam.length, $index)"></div>
       <!--<div class="row" ng-repeat="node in weapon.nodes" ng-show="node.name"-->
-           <!--popover="{{node.description}}" popover-trigger="mouseenter">-->
+           <!--popover="{{node.description}}" popover-trigger="mouseenter" popover-append-to-body="true">-->
         <!--<div class="col-xs-2">-->
           <!--<a class="icon icon-darkgray lt m-0" style="width:22px; height:22px">-->
             <!--<img class="img-responsive" ng-src="{{node.icon || ''}}">-->
