--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -1,4 +1,4 @@
-<div class="col-xs-12 col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
+<div class="col-xs-12 col-sm-6 col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
   <!--<div class="row ml-0 mr-0" ng-show="$index === 0">
     <div class="btn-group btn-group-justified shadow-z-1" style="height: 36px;">
       <div class="btn-group">
