--- a/app/views/blog/index.html
+++ b/app/views/blog/index.html
@@ -1,32 +1,19 @@
-<div class="container clearfix">
-
+<div class="container-fluid">
   <div class="row">
-
-
-    <!-- BLOG POSTS -->
-    <div class="col-sm-8 col-sm-offset-2 blog-posts">
-
-      <article class="post-entry">
+    <div class="col-xs-12">
+      <article class="post-entry shadow-z-1">
         <div class="entry-image">
-          <a href="#"><img src="/images/burning_shrine.jpg" class="img-responsive" alt="Image"></a>
-          <header>
-            <h2>
-              <em>Burning Shrine</em>
-            </h2>
-          </header>
+          <img src="/images/burning_shrine.jpg" class="img-responsive" alt="Image">
         </div>
-
         <div class="entry-title">
           <h2 >Introducing: myDestinyTrialsReport</h2>
         </div>
-
         <ul class="entry-meta clearfix">
           <li>
             <i class="fa fa-calendar-o"></i>
             11th Aug 2015
           </li>
         </ul>
-
         <div class="entry-content mt-10">
           <p>
             Since we have seen a lot of interest in sharing your own stats through our app we have made it a little bit easier for you.
@@ -45,9 +32,7 @@
             <a href="https://github.com/SteffanLong/DestinyTrialsReport" target="_top">GitHub</a>.</strong>
           </p>
         </div>
-
       </article>
-
     </div>
   </div>
 </div>
