Small responsive fixed

--- a/app/styles/main/_typography.scss
+++ b/app/styles/main/_typography.scss
@@ -16,6 +16,13 @@
   }
 }
 
+@media all and (max-width: 767px) {
+  .main-title {
+    text-align: center;
+    margin: auto;
+  }
+}
+
 .highlight {
   color: $trials-gold;
 }
