--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,5 +1,7 @@
 @import '//fonts.googleapis.com/css?family=Roboto+Condensed:400,300';
 
+@import 'vendor/chardin';
+
 @import 'inc/colors';
 
 @import 'main/layout';
