--- a/app/styles/elements/_gear.scss
+++ b/app/styles/elements/_gear.scss
@@ -48,3 +48,37 @@
 .gear-stat__perc {
   padding-left: .5em;
 }
+
+.gear__perks {
+  padding: 1em 0;
+  box-shadow: 0 -1px 0 darken($weapons-background, 10%);
+  border-top: 1px solid lighten($weapons-background, 10%);
+  border-bottom: 1px solid darken($weapons-background, 5%);
+}
+
+.gear__armor {
+  border-top: 1px solid lighten($weapons-background, 10%);
+  padding-top: 1em;
+}
+
+.gear-perk {
+  white-space: nowrap;
+  margin: .25em 0;
+}
+
+.gear-perk__icon {
+  width: 1.5em;
+  background: $perk-background;
+  display: inline-block;
+  margin-right: .3em;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+.gear-perk__title {
+  white-space: nowrap;
+  font-family: 'Roboto Condensed';
+  font-size: .8em;
+  line-height: 1;
+  color: $perk-background;
+}
