--- a/app/styles/elements/_header.scss
+++ b/app/styles/elements/_header.scss
@@ -1,7 +1,7 @@
 .header-bar {
   background: $header-bg;
-  padding: 1em 0;
-
+  //padding: 1em 0;
+  //
   .header-bar__content {
     display: flex;
     flex-direction: row;
