--- a/app/views/fireteam/gear.html
+++ b/app/views/fireteam/gear.html
@@ -3,42 +3,62 @@
        data-intro="Bar size relative to the percentage of the sum<br/><em>hover over the icons for true percentage</em>"
        data-position="left"
        chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-    <div class="gear__stat" popover="{{player.intPercent}}%" popover-trigger="mouseenter" popover-append-to-body="true">
-      <div class="gear-stat__label">
+    <div class="gear__stat">
+      <div class="gear-stat__label" popover="{{player.intPercent}}%" popover-trigger="mouseenter" popover-append-to-body="true">
         Intellect
       </div>
+      <div class="gear-stat__label" popover="{{player.disPercent}}%" popover-trigger="mouseenter" popover-append-to-body="true">
+        Discipline
+      </div>
+      <div class="gear-stat__label" popover="{{player.strPercent}}%" popover-trigger="mouseenter" popover-append-to-body="true">
+        Strength
+      </div>
+      <!--<div class="gear-stat__nr">-->
+        <!--<progress max="100" animate="true" class="progress not-rounded">-->
+          <!--<bar value="player.intPercent" class="progress-bar-primary">-->
+            <!--&lt;!&ndash;<span class="gear-stat__perc">{{player.intPercent}}%</span>&ndash;&gt;-->
+          <!--</bar>-->
+        <!--</progress>-->
+      <!--</div>-->
+    </div>
+    <div class="gear__stat">
+      <!--<div class="gear-stat__label">-->
+        <!--Discipline-->
+      <!--</div>-->
       <div class="gear-stat__nr">
         <progress max="100" animate="true" class="progress not-rounded">
           <bar value="player.intPercent" class="progress-bar-primary">
-            <!--<span class="gear-stat__perc">{{player.intPercent}}%</span>-->
+            <!--<span class="gear-stat__perc">{{player.disPercent}}%</span>-->
+          </bar>
+        </progress>
+      </div>
+      <div class="gear-stat__nr">
+        <progress max="100" animate="true" class="progress not-rounded">
+          <bar value="player.disPercent" class="progress-bar-primary">
+            <!--<span class="gear-stat__perc">{{player.disPercent}}%</span>-->
+          </bar>
+        </progress>
+      </div>
+      <div class="gear-stat__nr">
+        <progress max="100" animate="true" class="progress not-rounded">
+          <bar value="player.strPercent" class="progress-bar-primary">
+            <!--<span class="gear-stat__perc">{{player.disPercent}}%</span>-->
           </bar>
         </progress>
       </div>
     </div>
-    <div class="gear__stat" popover="{{player.disPercent}}%" popover-trigger="mouseenter" popover-append-to-body="true">
-      <div class="gear-stat__label">
-        Discipline
-      </div>
-    <div class="gear-stat__nr">
-       <progress max="100" animate="true" class="progress not-rounded">
-         <bar value="player.disPercent" class="progress-bar-primary">
-           <!--<span class="gear-stat__perc">{{player.disPercent}}%</span>-->
-         </bar>
-       </progress>
-     </div>
-    </div>
-    <div class="gear__stat" popover="{{player.strPercent}}%" popover-trigger="mouseenter" popover-append-to-body="true">
-      <div class="gear-stat__label">
-        Strength
-      </div>
-      <div class="gear-stat__nr">
-         <progress max="100" animate="true" class="progress not-rounded">
-           <bar value="player.strPercent" class="progress-bar-primary">
-             <!--<span class="gear-stat__perc">{{player.strPercent}}%</span>-->
-           </bar>
-         </progress>
-       </div>
-    </div>
+    <!--<div class="gear__stat" popover="{{player.strPercent}}%" popover-trigger="mouseenter" popover-append-to-body="true">-->
+      <!--&lt;!&ndash;<div class="gear-stat__label">&ndash;&gt;-->
+        <!--&lt;!&ndash;Strength&ndash;&gt;-->
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
+      <!--<div class="gear-stat__nr">-->
+         <!--<progress max="100" animate="true" class="progress not-rounded">-->
+           <!--<bar value="player.strPercent" class="progress-bar-primary">-->
+             <!--&lt;!&ndash;<span class="gear-stat__perc">{{player.strPercent}}%</span>&ndash;&gt;-->
+           <!--</bar>-->
+         <!--</progress>-->
+       <!--</div>-->
+    <!--</div>-->
   </div>
   <div class="gear__perks row">
     <div class="gear-perk col-xs-6" ng-repeat="classNode in player.classNodes track by $index"
