--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,20 +1,20 @@
 <div class="player shadow-z-1">
   <ng-include src="infoPartial"></ng-include>
-  <ng-include src="'views/fireteam/weapons.html'"></ng-include>
-  <ng-include src="'views/fireteam/gear.html'"></ng-include>
 
-  <!--<tabset class="col-xs-12 p-0" justified="true" style="min-height:549px">
-    <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped" class="btn-material-brown">
-      <ng-include src="statPartial"></ng-include>
-      <ng-include src="'views/fireteam/armor.html'"></ng-include>
+  <tabset class="">
+    <tab heading="Equipped" analytics-on analytics-event="Click" analytics-category="Equipped" class="">
+      <ng-include src="'views/fireteam/weapons.html'"></ng-include>
+      <ng-include src="'views/fireteam/gear.html'"></ng-include>
     </tab>
-    <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match" class="btn-material-brown">
-      <ng-include src="'views/fireteam/history.html'"></ng-include>
+    <tab heading="Last Match" analytics-on analytics-event="Click" analytics-category="Last Match" class="">
+      <ng-include src="'views/fireteam/weapons.html'"></ng-include>
+      <ng-include src="'views/fireteam/gear.html'"></ng-include>
     </tab>
-    <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats" class="btn-material-brown">
-      <ng-include src="'views/fireteam/addStats.html'"></ng-include>
+    <tab heading="Stats" analytics-on analytics-event="Click" analytics-category="Stats" class="">
+      <ng-include src="'views/fireteam/weapons.html'"></ng-include>
+      <ng-include src="'views/fireteam/gear.html'"></ng-include>
     </tab>
-  </tabset>-->
+  </tabset>
 
   <div class="player__links">
     <div class="row">
