Added material design icons

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,6 @@
-@import '//fonts.googleapis.com/css?family=Roboto+Condensed:400,300';
-
 @import 'vendor/chardin';
 
+@import 'inc/fonts';
 @import 'inc/colors';
 
 @import 'main/layout';
