--- a/app/views/shared/header.html
+++ b/app/views/shared/header.html
@@ -48,7 +48,7 @@
                               analytics-on analytics-event="Click" analytics-category="Refresh Inventory"
                               data-intro="Refreshes inventory for all players<br/><em>(weapons, armor, class)</em>"
                               data-position="right" chardin-show="true" data-class="hidden-xs hidden-sm">
-                        <i class="mdi-action-autorenew"></i>
+                        <i class="material-icons">cached</i>
                       </button>
                     </div>
                   </div>
@@ -66,7 +66,7 @@
                     </ul>
                   </div>
                   <div class="main-search__submit">
-                    <button type="submit" class="hidden-sm hidden-md hidden-lg btn btn-default btn-icon" ng-disabled="status"><i class="mdi-content-send"></i></button>
+                    <button type="submit" class="hidden-sm hidden-md hidden-lg btn btn-default btn-icon" ng-disabled="status"><i class="material-icons">send</i></button>
                     <button type="submit" class="hidden-xs btn btn-default btn-raised" ng-disabled="status">Search</button>
                   </div>
                 </div>
