Gave armor icons a rounded corner

--- a/app/styles/elements/_gear.scss
+++ b/app/styles/elements/_gear.scss
@@ -49,6 +49,10 @@
   padding-top: 1em;
 }
 
+.gear-armor img {
+  border-radius: 5px;
+}
+
 .gear-perk {
   white-space: nowrap;
   margin: .25em 0;
