--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -77,59 +77,17 @@
     <label>Last matches</label>
     <div class="player-history__matches" trials-history="player.pastActivities" show-help-overlay="isHelpOverlayElement(fireteam.length, $index)"></div>
   </div>
-  <!--<div class="player__hazards">-->
-    <!--<div class="player-hazard"-->
-      <!--ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard"-->
-      <!--popover="{{DestinyHazardDefinition[hazard]}}" popover-trigger="mouseenter" popover-append-to-body="true">-->
-    <!--</div>-->
-    <!--<div class="player-hazard"-->
-      <!--ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index" ng-bind="hazard"-->
-      <!--popover="{{DestinyHazardDefinition[hazard]}}" popover-trigger="mouseenter" popover-append-to-body="true">-->
-    <!--</div>-->
-    <!--<div class="player-hazard player-hazard&#45;&#45;none">-->
-      <!--This Guardian doesn't need cheap tricks-->
-    <!--</div>-->
-  <!--</div>-->
-  <!--<div>
-    <div class="front p-0"
-         data-intro="Trials <strong>k/d</strong> and <strong>win %</strong> for this <strong>character</strong><br/>Flawless based on account lifetime, <strong>not</strong> weekly stat"
-         data-position="right"
-         chardin-show="{{isHelpOverlayElement(fireteam.length, $index)}}">
-      <p class="mb-0">
-        <span ng-show="player.level && player.class.name">
-          <span class="hidden-xs">Level</span>
-          <span ng-bind="player.level"></span>
-          <span ng-bind="player.class.name"></span>
-          <span ng-show="player.stats.killsDeathsRatio" class="right">
-            <span class="hidden-xs hidden-md">K/D:</span>
-            <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue"></span>
-          </span>
-        </span>
-        <span ng-show="player.stats.activitiesEntered" class="right">
-          Win<span class="hidden-xs"> Rate</span>:
-          <span ng-bind="(100 * player.stats.activitiesWon.basic.value / player.stats.activitiesEntered.basic.value).toFixed()"></span>%
-        </span>
-      </p>
-      <p class="mb-0">
-        <span ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
-        <span ng-show="player.neverTrials">No Trials Games</span>
-        <span ng-show="player.stats.combatRating" class="right">
-          <span class="visible-xs-inline">CR:</span>
-          <span class="hidden-xs">Rating:</span>
-          <span ng-bind="player.stats.combatRating.basic.displayValue"></span>
-        </span>
-      </p>
+  <div class="player__hazards">
+    <div class="player-hazard player-hazard--friendly"
+      ng-repeat="hazard in player.nonHazard track by $index" ng-bind="hazard"
+      popover="{{DestinyHazardDefinition[hazard]}}" popover-trigger="mouseenter" popover-append-to-body="true">
     </div>
-    <div class="back">
-      <div class="col-xs-12">
-        <div class="col-xs-6" ng-repeat="classNode in player.classNodes track by $index"
-             popover="{{classNode.description}}" popover-trigger="mouseenter" popover-append-to-body="true">
-          <a class="icon icon-white m-0" style="margin-top:4px!important; margin-right:5px!important; width:25px; height:25px">
-            <img class="img-responsive" ng-src="{{classNode.icon || ''}}">
-          </a>
-          <span class="text-left text-sm text-white" style="top:10px; position:absolute; white-space: nowrap;" ng-bind="classNode.name"></span>
-        </div>
-      </div>
+    <div class="player-hazard"
+      ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index" ng-bind="hazard"
+      popover="{{DestinyHazardDefinition[hazard]}}" popover-trigger="mouseenter" popover-append-to-body="true">
     </div>
-  </div>-->
+    <div class="player-hazard player-hazard--none">
+      This Guardian doesn't need cheap tricks
+    </div>
+  </div>
 </div>
