--- a/app/styles/inc/_fonts.scss
+++ b/app/styles/inc/_fonts.scss
@@ -1,2 +1,1 @@
-@import '//fonts.googleapis.com/css?family=Roboto+Condensed:400,300';
-@import '//fonts.googleapis.com/icon?family=Material+Icons';
+@import '//fonts.googleapis.com/css?family=Roboto:400,300|Roboto+Condensed:400,300|Material+Icons';
