Made primary color (inherit from material design theme) customisable. Fixed recent matches not showing up on xs-devices.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,8 @@
-@import 'vendor/chardin';
-
 @import 'inc/fonts';
 @import 'inc/colors';
+
+@import 'vendor/theme-override';
+@import 'vendor/chardin';
 
 @import 'main/layout';
 @import 'main/typography';
