add mobile carousel

--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -1,4 +1,9 @@
-<div class="col-xs-12 col-sm-6 col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
+<ul rn-carousel class="image hidden-lg hidden-md hidden-sm" style="width: 400px;height: 823px;">
+  <li class="col-xs-12 col-sm-6 col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
+    <ng-include src="'views/fireteam/player.html'"></ng-include>
+  </li>
+</ul>
+<div class="col-xs-12 col-sm-6 col-md-4 hidden-xs" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
   <!--<div class="row ml-0 mr-0" ng-show="$index === 0">
     <div class="btn-group btn-group-justified shadow-z-1" style="height: 36px;">
       <div class="btn-group">
