--- a/app/views/fireteam/index.html
+++ b/app/views/fireteam/index.html
@@ -1,4 +1,4 @@
-<ul rn-carousel class="image hidden-lg hidden-md hidden-sm" style="width: 400px;height: 823px;">
+<ul rn-carousel class="image hidden-lg hidden-md hidden-sm col-xs-12" style="height: 823px;">
   <li class="col-xs-12 col-sm-6 col-md-4" ng-if="fireteam[0].name && $index < 3" ng-repeat="player in fireteam track by $index">
     <ng-include src="'views/fireteam/player.html'"></ng-include>
   </li>
